# godaddy-dynamic-ip

./: Cargo.toml  readme.md
src/: dns_record_manager.rs  main.rs
