[package]
name = "godaddy-dynamic-ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
env_logger = "0.9"
log = "0.4"
async-trait = "0.1"
serde = { version = "1", features=["derive"]}
serde_json = "1"
tokio = { version = "1", features = ["full"] }
public-ip = "0.2"
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls", "json"]}
